--- a/style.css
+++ b/style.css
@@ -3,113 +3,89 @@ html {
 	font-family: Space Grotesk;
 }
 
-.e1_2 {
-	background-color: rgba(0, 36.00000165402889, 44.000001177191734, 1);
-	width: 1440px;
-	height: 802px;
-	position: absolute;
+a {
+	text-decoration: none;
 }
 
-.e1_15 {
+.python_round {
 	width: 170px;
-	height: 169px;
+	height: 170px;
 	position: absolute;
 	left: 385px;
 	top: 126px;
-	border-radius: 50%;
 }
 
-.e1_12 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
+.python_circle {
+	background-color: rgba(217, 217, 217, 1);
 	width: 170px;
-	height: 169px;
+	height: 170px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
 	border-radius: 50%;
 }
 
-.e1_4 {
-	width: 141.6666717529297px;
-	height: 140.8333282470703px;
+.python_logo {
+	width: 142px;
+	height: 140px;
 	position: absolute;
-	left: 14.166666984558105px;
-	top: 14.083333015441895px;
-	background-image: url(images/python.png);
-	background-repeat: no-repeat;
+	left: 14px;
+	top: 14px;
+	background-image: url(assets/img/python.png);
 	background-size: cover;
 }
 
-.e1_13 {
+.css_round {
 	width: 82px;
 	height: 82px;
 	position: absolute;
 	left: 482px;
 	top: 611px;
-	border-radius: 50%;
 }
 
-.e1_3 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
+.css_circle {
+	background-color: rgba(217, 217, 217, 1);
 	width: 82px;
 	height: 82px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
 	border-radius: 50%;
 }
 
-.e1_11 {
-	width: 68.33332824707031px;
-	height: 68.33333587646484px;
+.css_logo {
+	width: 68px;
+	height: 68px;
 	position: absolute;
-	left: 6.8333306312561035px;
-	top: 6.833343505859375px;
-	background-image: url(images/css.png);
-	background-repeat: no-repeat;
+	left: 6px;
+	top: 6px;
+	background-image: url(assets/img/css.png);
 	background-size: cover;
 }
 
-.e2_37 {
+.php_round {
 	width: 82px;
 	height: 82px;
 	position: absolute;
 	left: 354px;
 	top: 429px;
-	border-radius: 50%;
 }
 
-.e2_33 {
+.php_circle {
+	background-color: rgba(217, 217, 217, 1);
 	width: 82px;
 	height: 82px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
 	border-radius: 50%;
 }
 
-.e2_34 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
-	width: 82px;
-	height: 82px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.e2_36 {
+.php_logo {
 	width: 65px;
 	height: 65px;
 	position: absolute;
 	left: 8px;
 	top: 9px;
-	background-image: url(images/php.png);
-	background-repeat: no-repeat;
+	background-image: url(assets/img/php.png);
 	background-size: cover;
 }
 
-.e1_14 {
+.html_round {
 	width: 75px;
 	height: 75px;
 	position: absolute;
@@ -117,28 +93,104 @@ html {
 	top: 154px;
 }
 
-.e1_7 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
+.html_circle {
+	background-color: rgba(217, 217, 217, 1);
 	width: 75px;
 	height: 75px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
 	border-radius: 50%;
 }
 
-.e1_9 {
-	width: 62.5px;
-	height: 62.5px;
+.html_logo {
+	width: 62px;
+	height: 62px;
 	position: absolute;
-	left: 6.25px;
-	top: 6.25px;
-	background-image: url(images/html-5.png);
-	background-repeat: no-repeat;
+	left: 6px;
+	top: 6px;
+	background-image: url(assets/img/html-5.png);
 	background-size: cover;
 }
 
-.e2_55 {
+.sql_round {
+	width: 119px;
+	height: 119px;
+	position: absolute;
+	left: 925px;
+	top: 548px;
+}
+
+.sql_circle {
+	background-color: rgba(217, 217, 217, 1);
+	width: 119px;
+	height: 119px;
+	position: absolute;
+	border-radius: 50%;
+}
+
+.sql_logo {
+	width: 85.94685363769531px;
+	height: 89.9756088256836px;
+	position: absolute;
+	left: 15.963414192199707px;
+	top: 14.512195587158203px;
+	background-image: url(assets/img/serveur-sql.png);
+	background-size: cover;
+}
+
+.linux_round {
+	width: 92px;
+	height: 92px;
+	position: absolute;
+	left: 654px;
+	top: 125px;
+}
+
+.linux_circle {
+	background-color: rgba(217, 217, 217, 1);
+	width: 92px;
+	height: 92px;
+	position: absolute;
+	border-radius: 50%;
+}
+
+.linux_logo {
+	width: 77px;
+	height: 77px;
+	position: absolute;
+	left: 8px;
+	top: 8px;
+	background-image: url(assets/img/linux.png);
+	background-size: cover;
+}
+
+.git_round {
+	width: 119px;
+	height: 119px;
+	position: absolute;
+	left: 967px;
+	top: 319px;
+}
+
+.git_circle {
+	background-color: rgba(217, 217, 217, 1);
+	width: 106px;
+	height: 106px;
+	position: absolute;
+	border-radius: 50%;
+}
+
+.git_logo {
+	width: 85px;
+	height: 82px;
+	position: absolute;
+	left: 11px;
+	top: 12px;
+	background-image: url(assets/img/git.png);
+	border-radius: 50%;
+	background-size: cover;
+}
+
+.center_round {
 	width: 428px;
 	height: 400px;
 	position: absolute;
@@ -146,26 +198,16 @@ html {
 	top: 238px;
 }
 
-.e1_24 {
-	width: 428px;
-	height: 400px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e1_23 {
+.center_circle {
 	border-radius: 500px;
-	background-color: rgba(1.648644134402275, 46.54746048152447, 56.52499549090862, 1);
+	background-color: rgba(1, 46, 56, 1);
 	width: 400px;
 	height: 400px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
 }
 
-.e1_20 {
+.text {
+	color: rgba(0, 209, 255, 1);
 	width: 414px;
 	height: 129px;
 	position: absolute;
@@ -173,32 +215,24 @@ html {
 	top: 140px;
 }
 
-.e1_16 {
-	color: rgba(0, 209.00000274181366, 255, 1);
-	width: 193.59999084472656px;
-	height: 51.20000076293945px;
+.line1 {
+	width: 193px;
+	height: 51px;
 	position: absolute;
 	left: 13px;
 	top: 0px;
-	font-family: Space Grotesk;
 	text-align: left;
 	font-size: 25px;
-	letter-spacing: 0;
-	border-radius: 50%;
 }
 
-.e1_17 {
-	color: rgba(0, 209.00000274181366, 255, 1);
+.line2 {
 	width: 414px;
 	height: 103px;
 	position: absolute;
 	left: 0px;
 	top: 26px;
-	font-family: Space Grotesk;
 	text-align: left;
 	font-size: 50px;
-	letter-spacing: 0;
-	border-radius: 50%;
 }
 
 .e2_32 {
@@ -221,12 +255,10 @@ html {
 	width: 119px;
 	height: 43px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
 }
 
 .link_CV {
-	background-color: rgba(0, 209.00000274181366, 255, 1);
+	background-color: rgba(0, 209, 255, 1);
 	width: 119px;
 	height: 43px;
 	position: absolute;
@@ -237,7 +269,7 @@ html {
 }
 
 .e1_19 {
-	color: rgba(30.00000011175871, 30.00000011175871, 30.00000011175871, 1);
+	color: rgba(30, 30, 30, 1);
 	width: 94px;
 	height: 24px;
 	position: absolute;
@@ -371,140 +403,7 @@ html {
 	letter-spacing: 0;
 }
 
-.e2_42 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 925px;
-	top: 548px;
-}
 
-.e2_39 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e2_40 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.e2_38 {
-	width: 85.94685363769531px;
-	height: 89.9756088256836px;
-	position: absolute;
-	left: 15.963414192199707px;
-	top: 14.512195587158203px;
-	background-image: url(images/serveur-sql.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.e2_48 {
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 654px;
-	top: 125px;
-}
-
-.e2_44 {
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e2_45 {
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e2_46 {
-	background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1);
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.e2_43 {
-	width: 77.31092071533203px;
-	height: 77.31092071533203px;
-	position: absolute;
-	left: 7.7310791015625px;
-	top: 7.731085777282715px;
-	background-image: url(images/linux.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.e5_39 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 967px;
-	top: 319px;
-}
-
-.e5_33 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e5_34 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e5_35 {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.e5_36 {
-	background-color: rgba(255, 255, 255, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.e5_38 {
-	width: 85px;
-	height: 82.39035034179688px;
-	position: absolute;
-	left: 17px;
-	top: 19px;
-	background-image: url(images/git.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
 
 .e6_40 {
 	background-color: rgba(0, 36.00000165402889, 44.000001177191734, 1);
@@ -685,7 +584,7 @@ html {
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(images/instagram.png);
+	background-image: url(assets/img/instagram.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -714,7 +613,7 @@ html {
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(images/linkedin.png);
+	background-image: url(assets/img/linkedin.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -743,7 +642,7 @@ html {
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(images/github.png);
+	background-image: url(assets/img/github.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
