--- a/assets/style.css
+++ b/assets/style.css
@@ -1,552 +1,108 @@
-html {
-	font-family: Space Grotesk;
-	background-color: rgba(0, 36, 44, 1);
-	;
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
-/* Landing page */
-.portfolio___landing_page__desktop_ {
-	background-color: rgba(0, 36, 44, 1);
-	width: 1440px;
-	height: 802px;
-	position: absolute;
+body {
+    font-family: Space Grotesk;
 }
 
-.short_presentation {
-	width: 428px;
-	height: 400px;
-	position: absolute;
-	left: 513px;
-	top: 238px;
+header {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("img/landscape.jpg");
+    background-size: cover;
 }
 
-.short_presentation_circle {
-	border-radius: 500px;
-	background-color: rgba(1, 46, 56, 1);
-	width: 400px;
-	height: 400px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
+.navbar {
+    position: absolute;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.download_cv {
-	width: 119px;
-	height: 43px;
-	position: absolute;
-	left: 141px;
-	top: 288px;
+.navbar a {
+    color: white;
 }
 
-.download_cd_rect {
-	background-color: rgba(0, 209, 255, 1);
-	width: 119px;
-	height: 43px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 5px;
+.navbar .logo {
+    font-size: 1.75em;
+    font-weight: bold;
 }
 
-.download_cv_text {
-	color: rgba(30, 30, 30, 1);
-	width: 94px;
-	height: 24px;
-	position: absolute;
-	left: 13px;
-	top: 11px;
-	text-align: left;
-	font-size: 15px;
-	letter-spacing: 0;
+.navbar .nav-links ul {
+    display: flex;
 }
 
-.line_3 {
-	color: rgba(0, 209, 255, 1);
-	width: 299px;
-	height: 23px;
-	position: absolute;
-	left: 51px;
-	top: 245px;
-	text-align: left;
-	font-size: 18px;
-	letter-spacing: 0;
+.navbar .nav-links ul li {
+    margin: 0 25px;
 }
 
-.line_2 {
-	color: rgba(0, 209, 255, 1);
-	width: 414px;
-	height: 103px;
-	position: absolute;
-	left: 14px;
-	top: 166px;
-	text-align: left;
-	font-size: 50px;
-	letter-spacing: 0;
+.navbar .nav-links ul li.active a{
+    color: #ed3c57;
+    font-weight: 600;
 }
 
-.line_1 {
-	color: rgba(0, 209, 255, 1);
-	width: 193px;
-	height: 51px;
-	position: absolute;
-	left: 27px;
-	top: 140px;
-	text-align: left;
-	font-size: 25px;
-	letter-spacing: 0;
+.navbar .menu-hamburger {
+    display: none;
+    position: absolute;
+    align-items: center;
+    right: 50px;
+    width: 35px;
 }
 
-.sql {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 925px;
-	top: 548px;
-}
+/* Format mobile */
+@media screen and (max-width : 900px){
+    .navbar {
+        padding: 0;
+    }
 
-.sql_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
+    .navbar .menu-hamburger {
+        position: absolute;
+        align-items: center;
+        display: block;
+        top: 50px;
+        right: 50px;
+    }
 
-.sql_image {
-	width: 85px;
-	height: 89px;
-	position: absolute;
-	left: 15px;
-	top: 14px;
-	background-image: url(img/serveur-sql.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
+    .navbar .logo {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+    }
 
-.linux {
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 654px;
-	top: 125px;
-}
+    .nav-links {
+        top: 0;
+        left: 0;
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(7px);
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: -100%;
+        transition: all 0.25s;
+    }
 
-.linux_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 92px;
-	height: 92px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
+    .nav-links.mobile-menu {
+        margin-left: 0;
+    }
 
-.linux_image {
-	width: 77px;
-	height: 77px;
-	position: absolute;
-	left: 7px;
-	top: 7px;
-	background-image: url(img/linux.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
+    .nav-links ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-.git {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 967px;
-	top: 319px;
-}
-
-.git_circle {
-	background-color: rgba(255, 255, 255, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.git_image {
-	width: 85px;
-	height: 82px;
-	position: absolute;
-	left: 17px;
-	top: 19px;
-	background-image: url(img/git.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.python {
-	width: 170px;
-	height: 169px;
-	position: absolute;
-	left: 385px;
-	top: 126px;
-}
-
-.python_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 170px;
-	height: 169px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.python_image {
-	width: 141px;
-	height: 140px;
-	position: absolute;
-	left: 14px;
-	top: 14px;
-	background-image: url(img/python.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.css {
-	width: 82px;
-	height: 82px;
-	position: absolute;
-	left: 482px;
-	top: 611px;
-}
-
-.css_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 82px;
-	height: 82px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.css_image {
-	width: 68px;
-	height: 68px;
-	position: absolute;
-	left: 6px;
-	top: 6px;
-	background-image: url(img/css.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.php {
-	width: 82px;
-	height: 82px;
-	position: absolute;
-	left: 354px;
-	top: 429px;
-}
-
-.php_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 82px;
-	height: 82px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.php_image {
-	width: 65px;
-	height: 65px;
-	position: absolute;
-	left: 8px;
-	top: 9px;
-	background-image: url(img/php.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.html {
-	width: 75px;
-	height: 75px;
-	position: absolute;
-	left: 866px;
-	top: 154px;
-}
-
-.html_circle {
-	background-color: rgba(217, 217, 217, 1);
-	width: 75px;
-	height: 75px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.html_image {
-	width: 62.5px;
-	height: 62.5px;
-	position: absolute;
-	left: 6.25px;
-	top: 6.25px;
-	background-image: url(img/html-5.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.header {
-	width: 518px;
-	height: 71px;
-	position: absolute;
-	left: -3px;
-	top: 0px;
-}
-
-.about_me {
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.about_me_polygon {
-	background-color: rgba(2, 47, 57, 1);
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 5px;
-}
-
-.about_me_text {
-	color: rgba(255, 255, 255, 1);
-	width: 122px;
-	height: 22px;
-	position: absolute;
-	left: 26px;
-	top: 24px;
-	text-align: left;
-	font-size: 18px;
-	letter-spacing: 0;
-}
-
-.projects {
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 160px;
-	top: 0px;
-}
-
-.projects_polygon {
-	background-color: rgba(2, 47, 57, 1);
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 3px;
-}
-
-.projetcts_text {
-	color: rgba(255, 255, 255, 1);
-	width: 104px;
-	height: 22px;
-	position: absolute;
-	left: 46px;
-	top: 24px;
-	text-align: left;
-	font-size: 18px;
-	letter-spacing: 0;
-}
-
-.contact {
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 322px;
-	top: 0px;
-}
-
-.contact_polygon {
-	background-color: rgba(2, 47, 57, 1);
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 3px;
-}
-
-.contact_text {
-	color: rgba(255, 255, 255, 1);
-	width: 78px;
-	height: 22px;
-	position: absolute;
-	left: 59px;
-	top: 24px;
-	text-align: left;
-	font-size: 18px;
-	letter-spacing: 0;
-}
-
-/* Contacts page */
-.portfolio___contact__desktop_ {
-	background-color: rgba(0, 36, 44, 1);
-	width: 1440px;
-	height: 802px;
-	position: absolute;
-}
-
-.home_page {
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 500px;
-}
-
-.home_page_polygon {
-	background-color: rgba(2, 47, 57, 1);
-	width: 196px;
-	height: 71px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 3px;
-}
-
-.home_page_text {
-	color: rgba(255, 255, 255, 1);
-	width: 99px;
-	height: 22px;
-	position: absolute;
-	left: 52px;
-	top: 24px;
-	text-align: left;
-	font-size: 18px;
-	letter-spacing: 0;
-}
-
-.all_contacts {
-	width: 400px;
-	height: 400px;
-	position: absolute;
-	left: 513px;
-	top: 238px;
-}
-
-.all_contacts_circle {
-	border-radius: 500px;
-	background-color: rgba(1, 46, 56, 1);
-	width: 400px;
-	height: 400px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.all_contacts_text {
-	color: rgba(0, 209, 255, 1);
-	width: 397px;
-	height: 68px;
-	position: absolute;
-	left: 3px;
-	top: 160px;
-	text-align: center;
-	font-size: 60px;
-	letter-spacing: 0;
-}
-
-.instagram {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 345px;
-	top: 407px;
-}
-
-.instagram_circle {
-	background-color: rgba(255, 255, 255, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.instagram_image {
-	width: 95px;
-	height: 95px;
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	background-image: url(img/instagram.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.linkedin {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 752px;
-	top: 107px;
-}
-
-.linkedin_circle {
-	background-color: rgba(255, 255, 255, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.linkedin_image {
-	width: 95px;
-	height: 95px;
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	background-image: url(img/linkedin.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.github {
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 997px;
-	top: 294px;
-}
-
-.github_circle {
-	background-color: rgba(255, 255, 255, 1);
-	width: 119px;
-	height: 119px;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	border-radius: 50%;
-}
-
-.github_image {
-	width: 95px;
-	height: 95px;
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	background-image: url(img/github.png);
-	background-repeat: no-repeat;
-	background-size: cover;
+    .navbar .nav-links ul li {
+        margin: 25px 0;
+        font-size: 2em;
+    }
 }
