--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,7 +12,7 @@ body {
 header {
     height: 100vh;
     width: 100vw;
-    background-image: url("img/landscape.jpg");
+    background-image: url("../assets/img/landscape.jpg");
     background-size: cover;
 }
 
