--- a/css/portfolio1.css
+++ b/css/portfolio1.css
@@ -1,8 +1,8 @@
-/* html {
+html {
 	font-family: Space Grotesk;
 	background-color: rgba(0, 36, 44, 1);
 	;
-} */
+}
 
 /* Landing page */
 .portfolio___landing_page__desktop_ {
@@ -120,7 +120,7 @@
 	position: absolute;
 	left: 15px;
 	top: 14px;
-	background-image: url(img/serveur-sql.png);
+	background-image: url(../assets/img/serveur-sql.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -149,7 +149,7 @@
 	position: absolute;
 	left: 7px;
 	top: 7px;
-	background-image: url(img/linux.png);
+	background-image: url(../assets/img/linux.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -178,7 +178,7 @@
 	position: absolute;
 	left: 17px;
 	top: 19px;
-	background-image: url(img/git.png);
+	background-image: url(../assets/img/git.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -207,7 +207,7 @@
 	position: absolute;
 	left: 14px;
 	top: 14px;
-	background-image: url(img/python.png);
+	background-image: url(../assets/img/python.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -236,7 +236,7 @@
 	position: absolute;
 	left: 6px;
 	top: 6px;
-	background-image: url(img/css.png);
+	background-image: url(../assets/img/css.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -265,7 +265,7 @@
 	position: absolute;
 	left: 8px;
 	top: 9px;
-	background-image: url(img/php.png);
+	background-image: url(../assets/img/php.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -294,7 +294,7 @@
 	position: absolute;
 	left: 6.25px;
 	top: 6.25px;
-	background-image: url(img/html-5.png);
+	background-image: url(../assets/img/html-5.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -488,7 +488,7 @@
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(img/instagram.png);
+	background-image: url(../assets/img/instagram.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -517,7 +517,7 @@
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(img/linkedin.png);
+	background-image: url(../assets/img/linkedin.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -546,7 +546,7 @@
 	position: absolute;
 	left: 12px;
 	top: 12px;
-	background-image: url(img/github.png);
+	background-image: url(../assets/img/github.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
